--- a/jetson/config/plugin_config_upterm.json
+++ b/jetson/config/plugin_config_upterm.json
@@ -3,5 +3,5 @@
     "unformattedJson": true,
     "appGUID": "3ff0bf0a-17a0-47c0-b9f6-229191393182",
     "accessKey": "Sc3CwmqcqT+S00h9kjShoAq3c0evZr91",
-    "sampleName": "TmatePlugin"
+    "sampleName": "UptermPlugin"
 }
