--- a/x86/config/plugin_config_upterm.json
+++ b/x86/config/plugin_config_upterm.json
@@ -3,5 +3,5 @@
     "unformattedJson": true,
     "appGUID": "286b0652-c5ef-46c0-aa8c-7b617bbf6ab9",
     "accessKey": "AJiPtn/f6LaAaC3e4iv9RdTqVL5bVByj",
-    "sampleName": "TmatePlugin"
+    "sampleName": "UptermPlugin"
 }
