state can run by script
- cmake: improve configure display text
- cmake: change to c++17
- cmake: implement `--install`
- cmake: check plugin package material
- implement run script and get output

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/plugIN-upterm",
-            "args": ["${workspaceFolder}/installed_dir/config/plugin_update_template.json"],
+            "program": "/opt/allxon/plugIN/e5c7f65b-1cf7-46e6-af56-d418ac43acc2/plugIN-upterm",
+            "args": ["/opt/allxon/plugIN/./e5c7f65b-1cf7-46e6-af56-d418ac43acc2/config/plugin_update_template.json"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
