--- a/build_info.h.in
+++ b/build_info.h.in
@@ -2,3 +2,4 @@
 #cmakedefine CMAKE_PROJECT_VERSION "@CMAKE_PROJECT_VERSION@"
 #cmakedefine PLUGIN_APP_GUID "@PLUGIN_APP_GUID@"
 #cmakedefine PLUGIN_ACCESS_KEY "@PLUGIN_ACCESS_KEY@"
+#cmakedefine PLUGIN_INSTALL_DIR "@PLUGIN_INSTALL_DIR@"
