--- a/build_info.h.in
+++ b/build_info.h.in
@@ -1,5 +1,5 @@
-#cmakedefine CMAKE_PROJECT_NAME "@CMAKE_PROJECT_NAME@"
-#cmakedefine CMAKE_PROJECT_VERSION "@CMAKE_PROJECT_VERSION@"
+#cmakedefine PLUGIN_NAME "@PLUGIN_NAME@"
+#cmakedefine PLUGIN_VERSION "@PLUGIN_VERSION@"
 #cmakedefine PLUGIN_APP_GUID "@PLUGIN_APP_GUID@"
 #cmakedefine PLUGIN_ACCESS_KEY "@PLUGIN_ACCESS_KEY@"
 #cmakedefine PLUGIN_INSTALL_DIR "@PLUGIN_INSTALL_DIR@"
