--- a/Dockerfile.x86_64
+++ b/Dockerfile.x86_64
@@ -11,10 +11,8 @@ RUN tar -xf cmake-3.23.2-linux-x86_64.tar.gz && cp -r cmake-3.23.2-linux-x86_64/
 FROM install-dependency AS build-stage
 COPY . /app
 WORKDIR /app
-RUN mkdir build
-WORKDIR /app/build
-RUN cmake -DBUILD_FROM_SDK_SRC=ON -DARCH=x86 ..
-RUN cmake --build . --target package
+RUN cmake -S . -B build -DBUILD_FROM_SDK_SRC=ON -DCMAKE_BUILD_TYPE=releases -DARCH=x86
+RUN cmake --build build --target package
 
 FROM scratch AS output-stage
-COPY --from=build-stage /app/*.tar.gz / 
+COPY --from=build-stage /app/build/*.tar.gz / 
