--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dep/asio"]
 	path = dep/asio
 	url = https://github.com/chriskohlhoff/asio.git
+[submodule "dep/plugin-sdk"]
+	path = dep/plugin-sdk
+	url = git@gitlab.com:allxon.com/plugin/plugin-sdk.git
